--- a/subscriptions.html
+++ b/subscriptions.html
@@ -322,11 +322,11 @@
 </header>
 <main class=" w-full mt-[81px]  lg:mt-[104px] lg:mr-[25%] xl:mr-[20%] 2xl:mr-[15%] mb-6 lg:w-[75%] xl:w-[80%] 2xl:w-[85%] ">
     <section>
-        <div class="mt-[101px] mb-5 md:mb-7 xl:mb-10 mr-12">
+        <div class="mt-[101px] md:mt-[131px] xl:mt-[155px] mb-5 md:mb-8  mr-12">
         <h2 class=" text-base xl:text-xl md:text-xl font-bold leading-tighter tracking-tighter aos-init aos-animate text-cyan-500">الإشتراكات</h2>
     </div>
-        <div class="flex justify-center	">
-            <div class="ml-8 mr-12 rounded-2xl	bg-[#7FCAEA]  w-[433px] h-[126px] min-w-52 pt-3 pr-5 pb-2.5	pl-5 flex-col flex justify-center gap-1.5">
+        <div class="flex justify-right">
+            <div class=" mx-6  md:mr-12 rounded-2xl	bg-[#7FCAEA]  w-[433px] h-[126px] min-w-52 pt-3 pr-5 pb-2.5	pl-5 flex-col flex justify-center gap-1.5">
                 <h4 class="text-white text-xs md:text-sm	">تاريخ إنتهاء الاشتراك</h4>
                 <h1 class="text-white text-xs md:text-2xl	font-semibold	"style="font-family: Inter;">01/01/2025</h1>
                 <div class="w-full flex justify-end">
@@ -336,6 +336,117 @@
                 </div>
             </div>
         </div>
+        <div class="flex justify-around max-w-[871px]  xl:mr-12 text-sm	md:text-xl w-[90.333333%] h-[52px] rounded-2xl bg-[#25A0D5]  mt-8  mx-auto	 ">
+            <div class="items-center w-[30%] h-10 m-auto rounded-xl flex justify-center bg-white text-cyan-500"><h4>المنشأة</h4></div>
+            <div class="items-center w-[30%] h-10 m-auto rounded-xl flex justify-center text-white bg-[#25A0D5]"><h4>الفروع</h4></div>
+            <div class="items-center w-[30%] h-10 m-auto rounded-xl flex justify-center text-white bg-[#25A0D5]"><h4>الفواتير</h4></div>
+        </div>
+    </section>
+        <section class="mt-5 md:md-48 xl:mt-8">
+        <div class="mb-3 md:mb-7 xl:mb-10 mr-12">
+        <h3 class=" text-base xl:text-xl font-bold">بيانات المنشأة</h3>
+    </div>
+    <div class="hidden md:flex md:justify-center inline-grid ">
+        <div class="w-[177px] h-[170px] lg:w-[46%] m-auto md:h-64   md:w-[358px] min-w-52  items-end gap-5 rounded-[20px] pr-10	flow " style="box-shadow: 4px 10px 60px 0px rgba(143, 143, 143, 0.15);">
+            <div class=" flow mt-6 text-cyan-500 ">
+            <!-- <img src="imges/eye.svg" alt="" class="ml-2.5 md:ml-5"> -->
+            <h3 class="mt-auto mb-auto font-bold text-xl md:text-[26px] xl:text-3xl">إلمام العربية لتقنية المعلومات</h3>
+        </div>
+        <ul class=" flex mb-5	 gap-1 mt-5">
+            <li class="text-[#A7A7A7]">رقم السجل التجاري</li>
+            <li>1010068617</li>
+            <li><svg class="cursor-pointer	" xmlns="http://www.w3.org/2000/svg" width="16" height="17" viewBox="0 0 16 17" fill="none">
+                <g clip-path="url(#clip0_1150_13558)">
+                    <path d="M10.6668 9.13685V12.1118C10.6668 14.591 9.7335 15.5827 7.40016 15.5827H4.60016C2.26683 15.5827 1.3335 14.591 1.3335 12.1118V9.13685C1.3335 6.65768 2.26683 5.66602 4.60016 5.66602H7.40016C9.7335 5.66602 10.6668 6.65768 10.6668 9.13685Z" stroke="#C8C8C8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M14.6668 4.88685V7.86185C14.6668 10.341 13.7335 11.3327 11.4002 11.3327H10.6668V9.13685C10.6668 6.65768 9.7335 5.66602 7.40016 5.66602H5.3335V4.88685C5.3335 2.40768 6.26683 1.41602 8.60016 1.41602H11.4002C13.7335 1.41602 14.6668 2.40768 14.6668 4.88685Z" stroke="#C8C8C8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                </g>
+                <defs>
+                    <clipPath id="clip0_1150_13558">
+                        <rect width="16" height="17" fill="white"/>
+                    </clipPath>
+                </defs>
+            </svg></li>
+        </ul>
+        <ul class="flex mb-5 gap-1">
+            <li class="text-[#A7A7A7]">الرقم الوطني الموحد</li>
+            <li>1010068617</li>
+        </ul>
+        <ul class="flex mb-5 gap-1">
+            <li class="text-[#A7A7A7]">نوع السجل</li>
+            <li>مساهمة</li>
+        </ul>
+        <ul class="flex gap-1">
+            <li class="text-[#A7A7A7]">مدينة السجل</li>
+            <li>الرياض</li>
+        </ul>
+        </div>
+
+        <div class="w-[177px] h-[170px] lg:w-[46%] m-auto md:h-64   md:w-[358px] min-w-52  items-end gap-5 rounded-[20px] pr-10	flow " style="box-shadow: 4px 10px 60px 0px rgba(143, 143, 143, 0.15);">
+        <ul class=" flex mb-5 gap-1 mt-5">
+            <li class="text-[#A7A7A7]">تاريخ إصدار السجل التجاري</li>
+            <li>01/01/2024</li>
+        </ul>
+        <ul class="flex mb-5 gap-1">
+            <li class="text-[#A7A7A7]">تاريخ إنتهاء السجل التجاري</li>
+            <li>01/01/2025</li>
+        </ul>
+        <div class="text-[#A7A7A7]">أنشطة السجل التجاري</div>
+        <ul class="flex mb-5 gap-1.5">
+            <li>أنشطة الشركات القابضة</li>
+            <li>- تشييد المباني السكنية والغير سكنية</li>
+            <li>- ترميم المباني </li>
+        </ul>
+        </div>
+    </div>
+    <div class="md:hidden flex justify-center">
+        <div class="text-xs	sm:text-base w-[90%] h-auto lg:w-[46%] m-auto md:h-64   md:w-[358px] min-w-52  items-end gap-5 rounded-[20px] pr-10	flow " style="box-shadow: 4px 10px 60px 0px rgba(143, 143, 143, 0.15);">
+            <div class=" flow mt-6 text-cyan-500 ">
+            <h3 class="mt-auto mb-auto font-bold text-xl md:text-[26px] xl:text-3xl">إلمام العربية لتقنية المعلومات</h3>
+        </div>
+        <ul class=" flex mb-5	 gap-1 mt-5">
+            <li class="text-[#A7A7A7]">رقم السجل التجاري</li>
+            <li>1010068617</li>
+            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="17" viewBox="0 0 16 17" fill="none">
+                <g clip-path="url(#clip0_1150_13558)">
+                    <path d="M10.6668 9.13685V12.1118C10.6668 14.591 9.7335 15.5827 7.40016 15.5827H4.60016C2.26683 15.5827 1.3335 14.591 1.3335 12.1118V9.13685C1.3335 6.65768 2.26683 5.66602 4.60016 5.66602H7.40016C9.7335 5.66602 10.6668 6.65768 10.6668 9.13685Z" stroke="#C8C8C8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M14.6668 4.88685V7.86185C14.6668 10.341 13.7335 11.3327 11.4002 11.3327H10.6668V9.13685C10.6668 6.65768 9.7335 5.66602 7.40016 5.66602H5.3335V4.88685C5.3335 2.40768 6.26683 1.41602 8.60016 1.41602H11.4002C13.7335 1.41602 14.6668 2.40768 14.6668 4.88685Z" stroke="#C8C8C8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                </g>
+                <defs>
+                    <clipPath id="clip0_1150_13558">
+                        <rect width="16" height="17" fill="white"/>
+                    </clipPath>
+                </defs>
+            </svg></li>
+        </ul>
+        <ul class="flex mb-5 gap-1">
+            <li class="text-[#A7A7A7]">الرقم الوطني الموحد</li>
+            <li>1010068617</li>
+        </ul>
+        <ul class="flex mb-5 gap-1">
+            <li class="text-[#A7A7A7]">نوع السجل</li>
+            <li>مساهمة</li>
+        </ul>
+        <ul class="flex gap-1 border-b border-[#E6E6E6] border-solid w-3/6 pb-3	text-xs	">
+            <li class="text-[#A7A7A7]">مدينة السجل</li>
+            <li>الرياض</li>
+        </ul>
+
+        <ul class=" flex mb-5 gap-1 mt-5">
+            <li class="text-[#A7A7A7]">تاريخ إصدار السجل التجاري</li>
+            <li>01/01/2024</li>
+        </ul>
+        <ul class="flex mb-5 gap-1">
+            <li class="text-[#A7A7A7]">تاريخ إنتهاء السجل التجاري</li>
+            <li>01/01/2025</li>
+        </ul>
+        <div class="text-[#A7A7A7]">أنشطة السجل التجاري</div>
+        <ul class="flex mb-5 gap-1.5">
+            <li>أنشطة الشركات القابضة</li>
+            <li>- تشييد المباني السكنية والغير سكنية</li>
+            <li>- ترميم المباني </li>
+        </ul>
+        </div>
+    </div>
     </section>
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
